--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.3%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 /* general stuff */
 
 
@@ -6,7 +23,7 @@ body, p{
 }
 
 body {
-	background-color: #F0EEEE;
+	background-color: #D0EEEE;
 }
 
 .cardbody {
@@ -37,6 +54,17 @@ html {
 
 .nav-item {
 	padding: .4rem;
+}
+
+/* aida please learn how to webdev properly */
+
+.class-image {
+	width: 100%;
+	position: relative;
+}
+
+.link:hover {
+    cursor: pointer;
 }
 
 /* pet images slider */
