--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body, p{
 
 body {
 	background-color: #D0EEEE;
+	margin-bottom: 60px;
 }
 
 .cardbody {
@@ -156,3 +157,12 @@ html {
 }
 
 
+/* Footer */
+
+.footer {
+	position: absolute;
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	background-color: #f5f5f5;
+}
